Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {315th} 1. Fixed a style issue with the user share rights dialog on IE.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -4852,7 +4852,7 @@ td.datePickerMonth {
 	.vibe-userShareRightsDlg-headerCellCenter {text-align: center;}
 	.vibe-userShareRightsDlg-headerCellLeft   {text-align: left;}
 	.vibe-userShareRightsDlg-headerCellSpacer {border-bottom-color: #cccccc; border-bottom-style: solid; border-bottom-width: 1px; padding-top: 10px;}
-	.vibe-userShareRightsDlg-panel            {text-align: left; width: 100%; margin-bottom: 10px; margin-top: 10px; padding: 3px 10px;}
+	.vibe-userShareRightsDlg-panel            {text-align: left; margin-bottom: 10px; margin-top: 10px; padding: 3px 10px;}
 	.vibe-userShareRightsDlg-progressBar      {margin-bottom: 5px; margin-top: 10px;}
 	.vibe-userShareRightsDlg-progressLabel    {margin-left: 3px;}
 	.vibe-userShareRightsDlg-progressPanel    {white-space: nowrap; font-size: 1.1em; font-weight: bold;}
